Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.11, 11.4, 11.8, 12.0(EOL)
-
None
Description
CREATE TABLE t (c INT) ENGINE=InnoDB; |
SET SESSION tx_read_only=1; |
ANALYZE TABLE t; |
Leads to:
|
CS 12.0.0 c3f21762e9db30c4a5dd1e9ac676dbdafa303d4a (Optimized) Build 19/03/2025 |
2025-03-25 14:13:06 4 [Warning] InnoDB: Recalculation of persistent statistics requested for table `test`.`t` but the required persistent statistics storage is corrupted.
|
Bisecting shows:
6e6a1b316ca8df5116613fbe4ca2dc37b3c73bd1 is the first bad commit
|
commit 6e6a1b316ca8df5116613fbe4ca2dc37b3c73bd1
|
Author: Marko Mäkelä <marko.makela@mariadb.com>
|
Date: Fri Feb 28 09:00:16 2025 +0200
|
|
|
MDEV-35000: dict_table_close() breaks STATS_AUTO_RECALC
|
Attachments
Issue Links
- is caused by
-
MDEV-35000 dict_table_close() breaks innodb_stats_auto_recalc
-
- Closed
-