MDEV-36373 Bogus Warning: ... storage is corrupted

ha_innobase::statistics_init(), ha_innobase::info_low():
Correctly handle a DB_READ_ONLY return value from dict_stats_save().
Fixes up commit 6e6a1b316ca8df5116613fbe4ca2dc37b3c73bd1 (MDEV-35000)